--- a/interfaz/.settings/org.eclipse.wst.common.component
+++ b/interfaz/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,9 @@
     <wb-module deploy-name="interfaz">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="negocio.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/negocio/negocio">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="interfaz"/>
         <property name="java-output-path" value="/interfaz/build/classes"/>
     </wb-module>
