--- a/interfaz/WebContent/estilos.css
+++ b/interfaz/WebContent/estilos.css
@@ -118,7 +118,7 @@ body {
 	display: inline-block;
 	margin: auto;
 	font-weight: bold;
-/* 	width: 592px; */
+	/* 	width: 592px; */
 	padding-bottom: 12px;
 	padding-left: 12px;
 	padding-right: 12px;
@@ -152,7 +152,7 @@ body {
 }
 
 .contents {
-/* 	margin-left: 12px; */
+	/* 	margin-left: 12px; */
 	padding: 8px;
 	padding-bottom: 50px;
 	width: 550px;
@@ -163,6 +163,11 @@ body {
 	-moz-border-radius: 8px;
 	background-color: #f1f1f1;
 	width: 550px;
+	text-align: left;
+}
+
+p {
+	margin: 0px;
 }
 
 label {
@@ -170,8 +175,12 @@ label {
 	color: #616161;
 	text-align: right;
 	margin-right: 15px;
-	width: 150px;
+	width: 180px;
 	padding-top: 10px;
+}
+
+label.for-inner-table {
+	padding-top: 15px;
 }
 
 input[type=text] {
@@ -182,7 +191,7 @@ input.small {
 	width: 64px;
 }
 
-input,textarea {
+input[type=text],textarea {
 	font-family: Arial;
 	font-size: 14px;
 	outline: 0;
@@ -195,6 +204,11 @@ input,textarea {
 	-moz-border-radius: 6px;
 }
 
+input[type=checkbox] {
+	margin-top: 10px;
+	border: 2px solid #f1f1f1;
+}
+
 textarea {
 	height: 90px;
 }
@@ -203,8 +217,12 @@ textarea:focus,input:focus {
 	border: 2px solid #900;
 }
 
+p.buttons {
+	margin-top: 10px;
+}
+
 .button {
-	width: 80px;
+	min-width: 80px;
 	height: 28px;
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -217,6 +235,7 @@ textarea:focus,input:focus {
 	color: White;
 	cursor: pointer;
 	font-weight: bold;
+	font-size: 14px;
 	float: right;
 }
 
@@ -255,11 +274,15 @@ table {
 	font-weight: normal;
 }
 
+table.inner-table {
+	margin-top: 40px;
+}
+
 table tr:nth-child(even) {
 	background-color: #e1e1e1;
 }
 
-table td, table th {
+table td,table th {
 	border-left: 1px solid #ccc;
 	border-top: 1px solid #ccc;
 	padding: 10px;
