--- a/interfaz/WebContent/estilos.css
+++ b/interfaz/WebContent/estilos.css
@@ -183,6 +183,10 @@ label.for-inner-table {
 	padding-top: 15px;
 }
 
+.no-label-p {
+	padding-left: 195px
+}
+
 input[type=text] {
 	height: 22px;
 }
@@ -263,6 +267,25 @@ a.button {
 	cursor: pointer;
 	font-weight: bold;
 	margin: auto;
+}
+
+input[type=submit].small-button {
+	min-width: 22px;
+	height: 22px;
+	margin-left: 12px;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-top: solid 1px #0C528E;
+	border-bottom: solid 1px #0E7EBD;
+	border-left: solid 1px #0E7EBD;
+	border-right: solid 1px #0E7EBD;
+	background-color: #0E7EBD;
+	color: White;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 14px;
+	float: right;
 }
 
 table.tabla {
