--- a/interfaz/WebContent/estilos.css
+++ b/interfaz/WebContent/estilos.css
@@ -39,8 +39,7 @@ body {
 	font-weight: bold;
 	color: #747577;
 	width: 100%;
-	height: 29px;
-	padding-top: 4px;
+	height: 30px;
 	background-color: #E5E5E5;
 	border-bottom: solid 1px #747577;
 }
@@ -72,29 +71,6 @@ body {
 	-webkit-border-bottom-right-radius: 8px;
 	border-bottom-right-radius: 8px;
 	border-top: solid 1px #747577;
-}
-
-#menu-bar ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	margin-left: 4px;
-}
-
-#menu-bar ul li {
-	float: left;
-	display: inline-block;
-	padding: 4px;
-}
-
-#menu-bar ul li a,#menu-bar ul li a:active,#menu-bar ul li a:visited {
-	text-decoration: none;
-	color: #747577;
-}
-
-#menu-bar ul li a:hover {
-	text-decoration: underline;
-	color: #747577;
 }
 
 #footer div {
@@ -206,7 +182,7 @@ label.for-inner-table {
 	display: none;
 }
 
-input[type=text] {
+input[type=text],input[type=password] {
 	height: 22px;
 }
 
@@ -218,7 +194,7 @@ input.small {
 	width: 64px;
 }
 
-input[type=text],textarea,select {
+input[type=text],input[type=password],textarea,select {
 	font-family: Arial;
 	font-size: 14px;
 	outline: 0;
@@ -380,3 +356,76 @@ table.tabla tr:last-child td:last-child {
 	-webkit-border-radius: 0 0 6px 0;
 	border-radius: 0 0 6px 0;
 }
+
+/*Menu*/
+
+#menu-bar ul li a,#menu-bar ul li a:active,#menu-bar ul li a:visited {
+	text-decoration: none;
+	color: #747577;
+}
+
+#menu-bar {
+	padding:0;
+}
+
+.drop_menu {
+	padding:0;
+	margin:0;
+	margin-left: 4px;
+	list-style-type:none;
+}
+
+.drop_menu li { 
+	float:left;
+}
+
+.drop_menu li a {
+	padding:7px 20px;
+	display:block;
+	text-decoration:none;
+}
+
+/* Submenu */
+.drop_menu ul {
+	position:absolute;
+	left:-9999px;
+	top:-9999px;
+	list-style-type:none;
+}
+
+.drop_menu li:hover { 
+	position:relative; 
+	background-color: #E5E5E5;
+}
+
+.drop_menu li:hover ul {
+	left:0px;
+	top:30px;
+	background-color: #E5E5E5;
+	padding:0px;
+}
+
+.drop_menu li:hover ul {
+	border-top: solid 1px #747577;
+}
+
+.drop_menu li:hover ul li {
+	border-bottom: solid 1px #747577;
+}
+ 
+.drop_menu li:hover ul li a {
+	padding:7px;
+	display:block;
+	width:168px;
+	text-indent:15px;
+	background-color: #E5E5E5;
+}
+
+.drop_menu li:hover ul li a:hover { background-color: #E5E5E5; }
+
+.salir {
+	padding:7px 20px;
+	display:block;
+	text-decoration:none;
+	float: right;
+} 
